--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "element-ui": "^2.8.2",
+    "vue": "^2.6.14",
+    "vue-i18n": "^8.18.2",
+    "vue-meta": "^2.4.0",
+    "vue-resource": "^1.5.3",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
